--- a/gitlab/postgresql/manifests/postgreesql.yaml
+++ b/gitlab/postgresql/manifests/postgreesql.yaml
@@ -77,7 +77,7 @@ spec:
       name: postgresdata
     spec:
       accessModes: [ "ReadWriteOnce" ]
-      storageClassName: "managed-nfs-storage"
+      storageClassName: "yc-network-hdd"
       resources:
         requests:
           storage: 10Gi 
