--- a/gitlab/postgresql/manifests/pgadmin.yaml
+++ b/gitlab/postgresql/manifests/pgadmin.yaml
@@ -4,7 +4,7 @@ apiVersion: v1
 metadata:
   name: pgadmin-pvc
   annotations:
-    volume.beta.kubernetes.io/storage-class: "yc-network-hdd"
+    volume.beta.kubernetes.io/storage-class: "managed-nfs-storage"
 spec:
   storageClassName: "managed-nfs-storage"
   accessModes:
